# starter

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakeLists_test_sequential.txt  README.md  big_file_splitter.cpp  build.sh  dpsk4_seastar_prime.cpp  glm5_libfork_prime.cpp  glm5_prime.cpp  glm5_seastar_prime.cpp  healer_seastar_prime.cpp  main.cc  minimax_libfork_prime.cpp  minimax_prime.cpp  minimax_seastar_prime.cpp  pony_alpha.cpp  prime_bench.cpp  prime_bench_lf.cpp  prime_calculator.cpp  sequence_prime.cpp  test_sequential.cpp  test_simple.cpp
.cache/clangd/index/: Collect.h.176646D48A9F4177.idx  Collect.h.4D46E71E60E16285.idx  Common.h.E45803E86ED2EF85.idx  CommonMacros.h.3796D704D02E14BE.idx  Condition.h.E96C31418A4380AF.idx  CountEvent.h.F8215D37E78A35F8.idx  DetachedCoroutine.h.2DD9DE66826122C1.idx  Executor.h.C0CABAFBAFFC9C36.idx  Future.h.67B0BBD33CF8D043.idx  FutureState.h.1A76BC05AF88BCBC.idx  IOExecutor.h.EC989A9732BC8B06.idx  Lazy.h.0CB936F2B50032D7.idx  LazyLocalBase.h.BE7F047B18C378BC.idx  LocalState.h.7CB68E369BE9EF41.idx  MoveWrapper.h.D20FF13D4D7EC549.idx  PromiseAllocator.h.EA6CC0D6C32C09F8.idx  Queue.h.876AF361B60C6738.idx  Signal.h.C71E0E0EF55A5B43.idx  SimpleExecutor.h.477DC9A13FD2ADCE.idx  SimpleIOExecutor.h.2D96CA7545AC24CC.idx  SyncAwait.h.74960F712747E201.idx  ThreadPool.h.E92EEBE0B468E651.idx  Traits.h.78094BCECC74978C.idx  Traits.h.ABDF7C875E42611F.idx  Try.h.50F1D3CE8D502D4F.idx  Unit.h.5C7A49366D88B3DF.idx  ViaCoroutine.h.4FF229680C1CA69C.idx  abort_on_ebadf.hh.EC5B0CB5CB77C0DB.idx  abort_on_expiry.hh.2E7EB8B962F37776.idx  abort_source.hh.1C7271D6C8159224.idx  abortable_fifo.hh.A760F203418FEB77.idx  alien.cc.F5173909F6AFA052.idx  alien.hh.8D37F19E628DF4E0.idx  align.hh.76A4F7D9AD8E7D34.idx  aligned_buffer.hh.9F5BEF57EE0CDA28.idx  all.hh.C0B1E7257480C2DD.idx  alloc_failure_injector.cc.061A2734FFF172DD.idx  alloc_failure_injector.hh.7FAFBA4995CE14BC.idx  api-level.hh.6BACEA9A1A9959A5.idx  api.hh.A3CBBE4554BA3045.idx  (+325 more)
.claude/: CLAUDE.md
.claude/commands/: build.md  test.md
.codebuddy/rules/: starter.mdc
.github/workflows/: build.yml
.trae/rules/: project_rules.md
home/li/starter/: CMakeLists.txt
scripts/: verify_sieve.sh
src/: big_file_splitter.cpp  dk4_seastar_prime.cpp  gemma4_seastar_prime.cpp  glm5_libfork_prime.cpp  glm5_seastar_prime.cpp  kimi_seastar_prime.cpp  minimax_libfork_prime.cpp  minimax_seastar_prime.cpp  prime_bench.cpp  prime_sieve.hpp  sequence_prime.cpp  sonnet46_seastar_prime.cpp
